--- a/Calendar App/calendar-app/src/Components/CalendarApp.css
+++ b/Calendar App/calendar-app/src/Components/CalendarApp.css
@@ -33,7 +33,8 @@
     font-family: "Bebas Neue", sans-serif;
     font-size: clamp(4rem, 3.8cqi, 7rem);
     color: #fff;
-    letter-spacing: .3rem
+    letter-spacing: .3rem;
+    padding-left: 1.3rem;
 }
 
 .navigate-date {
@@ -64,4 +65,215 @@
     align-items: center;
     font-size: 2rem;
     color: #c97f1a;
+    cursor: pointer;
+}
+
+.weekdays {
+    width: 100%;
+    display: flex;
+    margin: 3 rem 0;
+}
+
+.weekdays span {
+    width: calc(100% / 7);
+    font-size: clamp(1rem, 3.8cqi, 1.3rem);
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #78879e;
+    letter-spacing: .1rem;
+    display: flex;
+    justify-content: center;
+}
+
+.days {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.days span {
+    font-size: clamp(1.2rem, 1cqi, 1.6rem);
+    width: calc(100% / 7);
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ddd;
+    cursor: pointer;
+    text-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.current-day {
+    background-color: #ef9011;
+    border-radius: 50%;
+    box-shadow: 0 0 1.5rem 1rem rgba(239,144,17,.3);
+}
+
+.events {
+    width: 60%;
+    height: 100%;
+    padding: 3rem 0;
+}
+
+.event-popup {
+    position: absolute;
+    top: 38%;
+    left: 3rem;
+    background-color: #161b22;
+    width: clamp(25rem, 21cqi, 40rem);
+    aspect-ratio: 10 / 9;
+    border-radius: 1rem;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 2rem;
+}
+
+.time-input {
+    display: flex;
+    column-gap: 1rem;
+}
+
+.time-input input {
+    background-color: transparent;
+    border: none;
+    border-top: .2rem solid #00a3ff;
+    border-bottom: .2rem solid #00a3ff;
+    color: #fff;
+    width: clamp(4rem, 4cqi, 7rem);
+    height: 4rem;
+    text-align:center;
+    font-size(1.2rem, 1.2cqi, 1.6rem);
+}
+
+.time-input input[type="number"]::-webkit-outer-spin-button,
+.time-input input[type="number"]::-webkit-inner-spin-button {
+    appearance: none;
+}
+
+.event-popup-time {
+    width: clamp(4rem, 4cqi, 7rem);
+    background-color: #00a3ff;
+    color: #fff;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: clamp(1.5rem, 1.5cqi, 2.2rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 1.5rem 1rem rgba(0, 163, 255, 0.2);
+    letter-spacing: 0.1rem;
+}
+
+.event-popup textarea {
+    width: clamp(15rem, 15cqi, 25rem);
+    aspect-ratio: 5 / 2;
+    resize: none;
+    background-color: #0f1319;
+    border: none;
+    padding: 1rem;
+    border-radius: .5rem;
+    color: #78879e;
+    transition: border 0.5s;
+
+}
+
+.event-popup textarea:focus {
+    border: .1rem solid #00a3ff;
+}
+
+.event-popup textarea::placeholder {
+    font-size: clamp(1rem, .8cqi, 1.2rem);
+    color: #78879e;
+}
+
+.event-popup textarea:focus::placeholder {
+    color: transparent;
+}
+
+.event-popup-btn {
+    width: clamp(15rem, 15cqi, 25rem);
+    height: 4rem;
+    background-color: #ef9011;
+    color: #fff;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: clamp(1.5rem, 1.5cqi, 2.2rem);
+    letter-spacing: .1rem;
+    border: none;
+    box-shadow: 0 0 1.5rem 1rem regba(239, 144, 17, 0.2);
+    cursor: pointer;
+}
+
+.event-popup-btn:active {
+    transform: translateY(.1rem);
+}
+
+.close-event-popup {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.close-event-popup i {
+    font-size: 2.5rem;
+    color: #fff;
+}
+
+.event {
+    width: 100%;
+    height: 7 rem;
+    background-color: #00a3ff;
+    padding: 1.5rem 0;
+    border-radius: 1rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.event-date-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
+    border-right: .1rem solid rgba(255, 255, 255, 0.5);
+}
+
+.event-date {
+    font-size: clamp(1rem, 1cqi, 1.2 rem);
+    color: #ddd;
+}
+
+.event-time {
+    font-size: clamp(1.3rem, 1cqi, 1.6rem);
+    line-height: 4rem;
+    font-weight: bold;
+    color: #fff;
+}
+
+.event-text {
+    font-size: clamp(1.2rem, 1cqi, 1.4rem);
+    line-height: 2rem;
+    color: #fff;
+    width: 75%;
+    padding: 0 3rem 0 1rem;
+    overflow-wrap: break-word;
+}
+
+.event-buttons {
+    position: relative;
+    top: 50%;
+    transform: translateY(-25%);
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.event-buttons i {
+   font-size: 1.6rem;
+   color: #fff;
+   cursor: pointer;
 }
