--- a/Calendar App/calendar-app/src/Components/CalendarApp.css
+++ b/Calendar App/calendar-app/src/Components/CalendarApp.css
@@ -112,6 +112,11 @@
     width: 60%;
     height: 100%;
     padding: 3rem 0;
+    overflow-y: auto;
+}
+
+.events::-webkit-scrollbar {
+    display:none
 }
 
 .event-popup {
