Lesson 9 Complete: made project responsive

--- a/Calendar App/calendar-app/src/Components/CalendarApp.css
+++ b/Calendar App/calendar-app/src/Components/CalendarApp.css
@@ -282,3 +282,98 @@
    color: #fff;
    cursor: pointer;
 }
+
+@media (max-width: 850px) {
+    .calendar-app {
+        flex-direction: column;
+        aspect-ratio: 3 / 2;
+        row-gap: 2rem;
+    }
+
+    .calendar {
+        width: 70%;
+        margin: auto;
+    }
+
+    .navigate-date {
+        margin: 1rem 0;
+    }
+
+    .weekdays {
+        margin: 1rem 0;
+    }
+
+    .events {
+        width: 80%;
+        margin:auto;
+    }
+
+    .event-popup {
+        top: 18%;
+        left: 50%;
+        transform: translateX(50%);
+        width: 60%;
+        aspect-ratio: 4 / 3;
+        row-gap: 1rem;
+    }
+
+    .event-popup-time {
+        width: clamp(5rem, 10cqi, 8rem);
+        font-size: clamp(1.5rem, 3cqi, 2.2rem)
+    }
+
+    .time-input input {
+        width: clamp(5rem, 10cqi, 8rem);
+        font-size: clamp(1.2rem, 2cqi, 1.6rem)
+    }
+
+    .event-popup textarea {
+        width: clamp(18rem, 35cqi, 28rem);
+    }
+
+    .event-popup textarea::placeholder {
+        font-size: clamp(1rem, 1.5cqi, 1.2rem);
+    }
+
+    .event-popup-btn {
+        width: clamp(18rem, 35cqi, 28rem);
+        font-size: clamp(1.5rem, 3cqi, 2.2rem);
+    }
+
+    .event-date {
+        font-size: clamp(1rem, 1.4cqi, 1.2rem);
+    }
+
+    .event-time {
+        font-size: clamp(1rem, 2cqi, 1.6rem);
+    }
+
+    .event-text {
+        font-size: clamp(1rem, 2.5cqi, 1.4rem);
+    }
+}
+
+@media (max-width: 500px) {
+    .calendar-app {
+        aspect-ratio: 10 / 9;
+    }
+
+    .calendar {
+        width: 100%
+    }
+
+    .event-popup {
+        top: 23%;
+        width: 80%;
+    }
+
+    .events {
+        width: 100%;
+    }
+}
+
+@media (max-width: 375px) {
+    .calendar-app {
+        aspect-ratio: 3 /2;
+    }
+}
