--- a/Calendar App/calendar-app/src/index.css
+++ b/Calendar App/calendar-app/src/index.css
@@ -19,4 +19,11 @@ html {
     display: grid;
     place-items: center;
     perspective: 100rem;
+    overflow: hidden
+}
+
+@media (max-width: 500px) {
+    html {
+        font-size: 55%
+    }
 }
